...
    <string name="season_plural_with_number">%1$s Seasons</string>
    <string name="season_single_with_number">%1$s Season</string>
    <string name="runtime_with_value">%1$dh%02$dm</string>

    <!-- TESTING TODO clean up unused and rename-->
    <string name="remove">Remove</string>
    <string name="watchlist_title_updated">Watchlist</string>
    <string name="discovery_title_updated">Discovery</string>
    <string name="search_title">Search</string>
    <string name="movies_title">Movies</string>
    <string name="tv_shows_title">TV Shows</string>
    <string name="search_by_show_hint">Search TV Show by title</string>
    <string name="search_movie_show_hint">Search for a movie or a TV show</string>
    <string name="search_header_no_results">Oh no! We could not find what you were looking for.</string>
    <string name="search_sub_header_no_results">Try searching for a different movie or TV show</string>
    <string name="add_button">+ Add</string>
...
