...
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_sort_by_size"
        app:layout_constraintTop_toBottomOf="@+id/tab_bar_watchlist"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_watchlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/imgv_filter_watchlist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

...
