...
        android:layout_height="241dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/error_poster"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_detail_movie_add"/>

    <Button
        android:id="@+id/btn_detail_movie_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/media_add"
...
