...
                android:text="@string/most_popular_movies"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_heading_popular_movies"
                style="@style/Widget.ShowTracker.TextView.SubheaderMediaList" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rc_popular_movies"
                style="@style/Widget.ShowTracker.RecyclerView.HorizontalList"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_sub_heading_popular" />

            <!-- TOP RATED MOVIES -->

...
